Add enhanced path matching for patch coverage in multi-module projects
- Created CoveragePathMatcher class with bidirectional suffix matching
- Supports multiple coverage tools (JaCoCo, Cobertura, Clover, OpenCover, Go)
- Extracts module context from report paths for disambiguation
- Refactored FileSystemToolParser to use CoveragePathMatcher
- Added 32 unit tests for CoveragePathMatcher
- Added 5 integration tests for FileSystemToolParser
- All 268 tests passing
- Fixed PMD, Checkstyle, and SpotBugs violations